Updates to CSEE and final report

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -245,8 +245,7 @@
     "def runOptimizations():\n",
     "    removeUnusedProcedures()\n",
     "    deadStoreElimination()\n",
-    "    removeUnusedVariables()\n",
-    "    TESTcommonSubexpressionElimination()"
+    "    removeUnusedVariables()"
    ]
   },
   {
@@ -662,7 +661,7 @@
     "    modifiedregisters = [[None,[]]]\n",
     "    freeregs = possibleRegs.copy()\n",
     "    \n",
-    "    currentInstructions = test_instructions[curlev]\n",
+    "    currentInstructions = instructions[curlev]\n",
     "    \n",
     "    #A quick test validating that we do indeed have registers left to use for CSEE, if none there is no point in running this\n",
     "    #optimization.  We also track the unused ones, that way we know which to use if/when we get to that.\n",
@@ -907,28 +906,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-551b56603087>, line 256)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-551b56603087>\"\u001b[1;36m, line \u001b[1;32m256\u001b[0m\n\u001b[1;33m    if CSE[1][i] == \"|\":\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def TESTcommonSubexpressionElimination():\n",
-    "    global instructions, possibleRegs, regs\n",
-    "    \n",
+    "def TESTcommonSubexpressionElimination(test_instructions):\n",
     "    VALID_CSE_INS = (\"add\", \"sub\", \"div\", \"mod\", \"and\", \"or\")\n",
     "    commutative = {\"add\", \"and\", \"or\", \"mul\"}\n",
+    "    possibleRegs = {'$t0', '$t1', '$t2', '$t3', '$t4', '$t5', '$t6', '$t7', '$t8'}\n",
     "    \n",
     "    #These are primed with None and empty sets to make looping through each element actually do something the first cycle.  The list\n",
     "    #is later sliced with these first dead elements removed\n",
@@ -936,6 +925,8 @@
     "    modifiedregisters = [[None,[]]]\n",
     "    freeregs = possibleRegs.copy()\n",
     "\n",
+    "    '''\n",
+    "    #Since moved into \n",
     "    \n",
     "    #Since CSE elimination relies on there being actual common subexpressions, I am inserting the instructions of the example\n",
     "    #From the report here, and modifying it so that the high level CSEs are present in the low level, by reusing the same\n",
@@ -964,8 +955,9 @@
     "                       ('', 'lw $a0, d_', ''), ('', 'li $v0, 1', ''), ('', 'syscall', ''), ('', 'lw $a0, e_', ''),\n",
     "                       ('', 'li $v0, 1', ''), ('', 'syscall', ''), ('', 'li $v0, 10', ''), ('', 'syscall', ''),\n",
     "                       ('', '.end main', '')]]\n",
+    "    '''\n",
     "    \n",
-    "    #currentInstructions = test_instructions[curlev]\n",
+    "    #currentInstructions = instructions[curlev]\n",
     "    currentInstructions = test_instructions[0]\n",
     "    \n",
     "    #A quick test validating that we do indeed have registers left to use for CSEE, if none there is no point in running this\n",
@@ -989,7 +981,7 @@
     "        op = None\n",
     "        regIndexes = []\n",
     "        \n",
-    "        print(\"-----------------\")\n",
+    "        print(\"----------------------------\")\n",
     "        print(\"instruction number: \" + str(i))\n",
     "        print(currentInstructions[i])\n",
     "        \n",
@@ -1075,6 +1067,13 @@
     "    subexpression = subexpression[1:]\n",
     "    modifiedregisters = modifiedregisters[1:]\n",
     "    \n",
+    "    print(\"\\n\")\n",
+    "    \n",
+    "    print(\"Possible CSEs before culling of single instances:\")\n",
+    "    print(subexpression)\n",
+    "    print(\"Modified Registers List:\")\n",
+    "    print(modifiedregisters)\n",
+    "    \n",
     "    #Now that we've determined what lines of code are possible CSEs, it's time to go through and determine which are actually common\n",
     "    #and not a single line, and later which also are safe. \n",
     "    for i in range(len(subexpression)):\n",
@@ -1085,12 +1084,17 @@
     "    if len(subexpression) == 0:\n",
     "        return\n",
     "    \n",
-    "    print (\"Beginning actual CSE elimination testing\")\n",
-    "    print(modifiedregisters)\n",
+    "    print(\"\\n\")\n",
+    "    print(\"Beginning CSEE safety and replacement\")\n",
+    "    print(\"=======================================\")\n",
+    "   \n",
     "    \n",
     "    #This puts the most common subexpressions at the lowest index values, this is important for limited register situations, the most\n",
     "    #common CSEs should be handled first as they are likely the best candidates for efficiency increases.\n",
     "    subexpression.sort(key = lambda tup: len(tup[1]), reverse = True)\n",
+    "    \n",
+    "    print(\"Sorted list of common subexpressions by amount of occurances:\")\n",
+    "    print(subexpression)\n",
     "    \n",
     "    #We use this to track how many CSEE's we've done, no point in looking further if we only had 1 free register and used it already\n",
     "    CSEEregs = 0\n",
@@ -1128,8 +1132,7 @@
     "                        #Might still be safe, check ranges    \n",
     "                        for change in unsaferegs[1]:\n",
     "                            if startRange < change < endRange:\n",
-    "                                print(\"Register change in region detected!  CSE is not safe to replace!\")\n",
-    "                                print(CSE[1])\n",
+    "                                print(\"Register change in region detected\")\n",
     "                                safe = False\n",
     "                                break\n",
     "            if not safe:\n",
@@ -1142,7 +1145,10 @@
     "        if CSEsafe:\n",
     "            CSEEregs += 1\n",
     "                \n",
+    "    print(\"\")\n",
+    "    print(\"Final list of CSEs with | to represent unsafe code between boundaries:\")\n",
     "    print(subexpression)\n",
+    "    print(\"\")\n",
     "        \n",
     "    #Ok, *finally*, we have our list of common subexpressions with breaks in unsafe regions.  We know we have the registers\n",
     "    #for the most common CSEs, which we can finally start pairing with each CSE, adding lines to the code, and replacing\n",
@@ -1156,7 +1162,6 @@
     "        startOffset = 0\n",
     "        endOffset = 0\n",
     "        for j in lineAdditions:\n",
-    "            print (j)\n",
     "            if j <= startRange:\n",
     "                startOffset += 1\n",
     "            if j <= endOffset:\n",
@@ -1180,7 +1185,6 @@
     "                        pass\n",
     "                            \n",
     "                regIndexes.sort()\n",
-    "                print(regIndexes)\n",
     "                regIndex = regIndexes[0]\n",
     "                targetreg = currentInstructions[startRange + startOffset][1][regIndex:regIndex+3]\n",
     "                \n",
@@ -1198,19 +1202,16 @@
     "                    endOffset += 1\n",
     "                    currentInstructions[startRange+startOffset] = ('', 'add ' + targetreg +', ' + CSEEReg + ', $0', '')\n",
     "                    print(\"Swapped CSE! Index: \" + str(startRange+startOffset))\n",
-    "                    #print(('', 'add ' + targetreg +', ' + CSEEReg + ', $0', ''))\n",
     "                \n",
     "                targetreg = currentInstructions[endRange + endOffset][1][regIndex:regIndex+3]\n",
     "                print(\"Swapped CSE!  Index: \" + str(endRange + endOffset))\n",
     "                currentInstructions[endRange + endOffset] = ('', 'add ' + targetreg +', ' + CSEEReg + ', $0', '')\n",
-    "                \n",
+    "    \n",
+    "    returnCode = []\n",
     "    for i in currentInstructions:\n",
-    "        print(i)                \n",
-    "                \n",
-    "                    \n",
+    "        returnCode.append(assembly(i[0], i[1], i[2]))\n",
     "        \n",
-    "            \n",
-    "    "
+    "    return returnCode"
    ]
   },
   {
