fixing time complexity

--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -65,9 +65,9 @@
     "1. Removing Unused Procedures has a worst-case time complexity $O(n)$. We iterate through every instruction once to determine which procedures are called.\n",
     "1. Removing Dead Stores has a worst-case time complexity $O(n^2)$. We iterate once through every instruction, and if that instruction is a $sw$, it iterates through every previously declared address. If all of the previous instructions are $lw$ instructions, then we must check all of the addresses specified. Therefore (worst-case) we iterate through every instruction once for every instruction; therefore $n^2$.\n",
     "1. Removing Unused Variables has a worst-case time complexity $O(nk)$. For every instruction, we iterate through all available variables in that scope to determine if they are used in that scope.\n",
-    "1. Removing Common Subexpressions has a worst-case time complexity $O(n^3)$. We iterate once through every instruction, and for each instruction we iterate through every register used and then iterate again for every register which is modified. In the worst case, each previous instruction uses and modifies a register, meaning we are iterating $n^3$ times.\n",
+    "1. Removing Common Subexpressions has a worst-case time complexity $O(n \\times (\\log (n))^2)$. \n",
     "\n",
-    "Therefore, in total our optimizations have a time complexity $O(n^3 + nk)$; the $n$ and $n^2$ terms are \"absorbed\" by the $n^3$ term.\n",
+    "Therefore, in total our optimizations have a time complexity $O(n + nk)$; the $n$ and $n \\times (\\log (n))^2$ terms are \"absorbed\" by the $n^2$ term.\n",
     "\n",
     "## Examples"
    ]
