--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -318,16 +318,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
    "source": [
-    "\"\"\"program p;\n",
+    "program p;\n",
     "    var a,b,c,d,e,temp: integer;\n",
     "    procedure f;\n",
     "        begin\n",
@@ -369,26 +367,11 @@
     "        write(d)\n",
     "        end;\n",
     "    begin\n",
-    "        f()\n",
-    "        g()\n",
-    "        h()\n",
-    "        x()\n",
-    "    end\n",
-    "\"\"\"\n",
-    "\n",
-    "compareOutput(\"\"\"program p;\n",
-    "    var a,b,c,d,e: integer;\n",
-    "    begin\n",
-    "        a := 1;\n",
-    "        b := 2;\n",
-    "        c := a + b;\n",
-    "        d := b + a;\n",
-    "        e := c + (a + b);\n",
-    "        write(c);\n",
-    "        write(d);\n",
-    "        write(e)\n",
-    "    end\n",
-    "    \"\"\")"
+    "        f();\n",
+    "        g();\n",
+    "        h();\n",
+    "        x();\n",
+    "    end"
    ]
   },
   {
@@ -404,7 +387,67 @@
     "\n",
     "Finally, h is an example that CSEs are not necessarily only 2 variables in size, they may be any size, however the more complex a CSE the more difficult it is to keep track of its individual components and ensure that no unsafe optimization occurs.  This is partially mitigated by making common subexpression elimination only remove 2 term CSEs and repeatedly run until no more code changes occur, so that at each step two variables are collapsed into one, and if any changes were to occur to any component variables of the CSE, an earlier run of the elimination would correctly determine that the CSE is unsafe.  However, this also may cause the compiler to fail to detect a valid CSE due to 3 or more term CSEs being in different orders, due to commutative operations.\n",
     "\n",
-    "Note that our CSE elimination is unsafe with code that is not loop invariant, as well as some with jumps backward (be it from looping or some if/else branches).  An edge case also exists where if a CSE is contained within an assignment to a variable within that CSE, CSEE does not run for that case (for instance, if a := a + b existed in the above code after it's initial assignment), even though it would be safe to do so (but not after).  This is to prevent a wide variety of issues that happen when an unsafe assignment occurs on the boundaries of our ranges."
+    "Note that our CSE elimination is unsafe with code that is not loop invariant, as well as some with jumps backward (be it from looping or some if/else branches).  An edge case also exists where if a CSE is contained within an assignment to a variable within that CSE, CSEE does not run for that case (for instance, if a := a + b existed in the above code after it's initial assignment), even though it would be safe to do so (but not after).  This is to prevent a wide variety of issues that happen when an unsafe assignment occurs on the boundaries of our ranges.\n",
+    "\n",
+    "Below is an example of code that contains 1 CSE 4 times, with a CSE variable modified between the second and third occurance.  However, when we compile it, we find P0 does not generate these CSEs, as it does not reuse registers for reoccuring (and unchanged) variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "compareOutput(\"\"\"program p;\n",
+    "    var a,b,c,d,e: integer;\n",
+    "    begin\n",
+    "        a := 1;\n",
+    "        b := 2;\n",
+    "        c := a + b;\n",
+    "        d := b + a;\n",
+    "        a := a + b;\n",
+    "        e := c + (a + b);\n",
+    "        e := 4 + (a + b);\n",
+    "        write(c);\n",
+    "        write(d);\n",
+    "        write(e)\n",
+    "    end\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While CSEE can easily run on this code, no changes will be made and therefore to demonstrate CSEE functionality we have manually replaced the generated instructions with more efficient code that reuses registers if it can, generating the CSEs that can now be optimized.  Note that while this code is funtionally similar, it is not the same as shown above.  Above the code is a generated stream of prints that describe what the CSEE function is doing, with the intial step through and how it treats each line, to better demonstrate the structure and steps of the optimization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_instructions = [[('', '.data', ''), ('', '.globl main', ''), ('', '.ent main', ''), ('main', '', ''),\n",
+    "                       ('', 'addi $t6, $0, 1', ''), ('', 'sw $t6, a_', ''), ('', 'addi $t4, $0, 2', ''),\n",
+    "                       ('', 'sw $t4, b_', ''),\n",
+    "                       ('', 'add $t5, $t4, $t6', ''), ('', 'sw $t5, c_', ''), ('', 'add $t1, $t4, $t6', ''), ('', 'add $t3, $t4, $t6', ''),\n",
+    "                       ('', 'add $t4, $t5, $t1', ''), ('', 'add $t7, $t6, $t4', ''), ('', 'sw $t7, d_', ''), \n",
+    "                       ('', 'add $t0, $t4, $t6', ''), ('', 'add $t8, $t5, $t0', ''),\n",
+    "                       ('', 'sw $t8, e_', ''), ('', 'lw $a0, c_', ''), ('', 'li $v0, 1', ''), ('', 'syscall', ''),\n",
+    "                       ('', 'lw $a0, d_', ''), ('', 'li $v0, 1', ''), ('', 'syscall', ''), ('', 'lw $a0, e_', ''),\n",
+    "                       ('', 'li $v0, 1', ''), ('', 'syscall', ''), ('', 'li $v0, 10', ''), ('', 'syscall', ''),\n",
+    "                       ('', '.end main', '')]]\n",
+    "\n",
+    "startCode = []\n",
+    "for i in test_instructions[0]:\n",
+    "    startCode.append(assembly(i[0], i[1], i[2]))\n",
+    "\n",
+    "renderDiff(startCode,TESTcommonSubexpressionElimination(test_instructions))"
    ]
   },
   {
